...
            namePt = "Argentina",
            nameEs = "Argentina",
            flagResId = R.drawable.argentina,
            region = "South America"
        ),
        Country(
            nameEn = "Brazil",
            namePt = "Brasil",
            nameEs = "Brasil",
            flagResId = R.drawable.brasil,
            region = "South America"
        ),
        Country(
            nameEn = "China",
...
